--- a/about.html
+++ b/about.html
@@ -181,9 +181,9 @@
                 <div class="work-process-two__top">
                     <div class="sec-title text-center">
 
-                        <h6 class="sec-title__tagline">Work Process</h6><!-- /.sec-title__tagline -->
+                        <h6 class="sec-title__tagline">Our creativeness</h6><!-- /.sec-title__tagline -->
 
-                        <h3 class="sec-title__title">Our Working Pocess</h3><!-- /.sec-title__title -->
+                        <h3 class="sec-title__title">Our Process! Your Success!</h3><!-- /.sec-title__title -->
                     </div><!-- /.sec-title -->
                 </div>
                 <div class="row gutter-y-30">
@@ -193,17 +193,17 @@
                                 <i class="flaticon-service"></i>
                                 <div class="work-process-two__item__number"></div>
                             </div>
-                            <h3 class="work-process-two__item__title">Choose A Service</h3>
+                            <h3 class="work-process-two__item__title">Discover & Collaborate</h3>
                             <p class="work-process-two__item__text">
-                                In a free hour, when our power of choice is untrammeled and
+                                We listen, understand, and shape your ideas into reality.
                             </p>
                         </div>
                     </div><!-- item -->
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                         <div class="work-process-two__item work-process-two__item--reverse">
-                            <h3 class="work-process-two__item__title">Define Requirements</h3>
+                            <h3 class="work-process-two__item__title">Plan & Strategize</h3>
                             <p class="work-process-two__item__text">
-                                In a free hour, when our power of choice is untrammeled and
+                                Clear goals, smart strategies, and a roadmap for success.
                             </p>
                             <div class="work-process-two__item__icon">
                                 <i class="flaticon-define"></i>
@@ -217,17 +217,17 @@
                                 <i class="flaticon-team"></i>
                                 <div class="work-process-two__item__number"></div>
                             </div>
-                            <h3 class="work-process-two__item__title">Request A Meeting</h3>
+                            <h3 class="work-process-two__item__title">Innovate & Create</h3>
                             <p class="work-process-two__item__text">
-                                In a free hour, when our power of choice is untrammeled and
+                                Building creative, high-tech solutions tailored to you.
                             </p>
                         </div>
                     </div><!-- item -->
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                         <div class="work-process-two__item work-process-two__item--reverse">
-                            <h3 class="work-process-two__item__title">Final Solution</h3>
+                            <h3 class="work-process-two__item__title">Deliver & Support</h3>
                             <p class="work-process-two__item__text">
-                                In a free hour, when our power of choice is untrammeled and
+                                Launching with precision and supporting for growth.
                             </p>
                             <div class="work-process-two__item__icon">
                                 <i class="flaticon-solution"></i>
@@ -246,7 +246,7 @@
                 <div class="team-four__top">
                     <div class="sec-title text-left">
 
-                        <h6 class="sec-title__tagline">our expert team</h6><!-- /.sec-title__tagline -->
+                        <h6 class="sec-title__tagline">Our expert team</h6><!-- /.sec-title__tagline -->
 
                         <h3 class="sec-title__title">Meet Our Professional<br> Team Members</h3><!-- /.sec-title__title -->
                     </div><!-- /.sec-title -->
@@ -309,7 +309,7 @@
                     <div class="item">
                         <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='1.5k'>
                             <div class="team-card-four__image">
-                                <img src="assets/images/team4.svg" alt="Kristin Watson">
+                                <img src="assets/images/team3.svg" alt="Kristin Watson">
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
@@ -340,7 +340,7 @@
                     <div class="item">
                         <div class="team-card-four wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
                             <div class="team-card-four__image">
-                                <img src="assets/images/team3.svg" alt="Brooklyn Simmons">
+                                <img src="assets/images/team5.svg" alt="Brooklyn Simmons">
                             </div><!-- /.team-card-four__image -->
                             <div class="team-card-four__content">
                                 <h3 class="team-card-four__title">
@@ -414,7 +414,7 @@
                                     <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
-                                    We’re Strategic Digital Marketing Agency
+                                    We’re Strategic Software Development Company
                                 </p>
                                 <a class="growim-btn growim-btn--white" href="contact.html">
                                     <span class="growim-btn__text">Contact Us</span>
@@ -447,8 +447,8 @@
                                 <ul class="list-unstyled footer-widget__links">
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="blog-list-right.html">Blog & News</a></li>
-                                    <li><a href="faq.html">FAQ’S</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="services.html#faq">FAQ’S</a></li>
                                     <li class="d-none hide hidden"><a href="login.html">Login / Register</a></li>
                                 </ul><!-- /.list-unstyled footer-widget__links -->
                             </div><!-- /.footer-widget -->
