--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@
                                     <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
-                                    We’re Strategic Digital Marketing Agency
+                                    We’re Strategic Software Development Company
                                 </p>
                                 <a class="growim-btn growim-btn--white" href="contact.html">
                                     <span class="growim-btn__text">Contact Us</span>
@@ -276,8 +276,8 @@
                                 <ul class="list-unstyled footer-widget__links">
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="blog-list-right.html">Blog & News</a></li>
-                                    <li><a href="faq.html">FAQ’S</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="services.html#faq">FAQ’S</a></li>
                                     <li class="d-none hide hidden"><a href="login.html">Login / Register</a></li>
                                 </ul><!-- /.list-unstyled footer-widget__links -->
                             </div><!-- /.footer-widget -->
