--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <img src="assets/images/m.svg" alt="Growim" width="50">
                             <div class="logo-text">
                                 <h1>MPL</h1>
-                                <p>Softwares</p>
+                                <p>Softwares </p>
                             </div>
                         </a>
                     </div><!-- /.main-header__logo -->
@@ -1023,18 +1023,16 @@ window.addEventListener("message", function (e) {
             <h5 class="portfolio-one__title">Latest Work</h5>
             <div class="portfolio-one__slide-text wow fadeInUp" data-wow-delay="100ms">
                 <ul class="portfolio-one__slide-text__list list-unstyled">
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
-                    <li>DEVELOPMENT</li>
-                    <li>Marketing Agency</li>
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
-                    <li>DEVELOPMENT</li>
-                    <li>Marketing Agency</li>
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
-                    <li>DEVELOPMENT</li>
-                    <li>Marketing Agency</li>
+                    <li>Landing Pages</li>
+                    <li>Progressive Web Apps</li>
+                    <li>CLIENT FEEDBACK</li>
+                    <li>Single Page Applications</li>
+                    <li>Custom Web Portals</li>
+                    <li>E-Commerce</li>
+                    <li>SaaS Product</li>
+                    <li>Custom Software</li>
+                    <li>Web Applications</li>
+                    <li>Product Development</li>
                 </ul>
             </div>
             <div class="container">
@@ -1194,18 +1192,16 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
         <section class="slide-text">
             <div class="slide-text__wrap wow fadeInUp" data-wow-delay="100ms">
                 <ul class="slide-text__list list-unstyled">
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
+                    <li>Landing Pages</li>
+                    <li>Progressive Web Apps</li>
                     <li>CLIENT FEEDBACK</li>
-                    <li>Marketing Agency</li>
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
-                    <li>CLIENT FEEDBACK</li>
-                    <li>Marketing Agency</li>
-                    <li>BRANDING</li>
-                    <li>MARKETING</li>
-                    <li>CLIENT FEEDBACK</li>
-                    <li>Marketing Agency</li>
+                    <li>Single Page Applications</li>
+                    <li>Custom Web Portals</li>
+                    <li>E-Commerce</li>
+                    <li>SaaS Product</li>
+                    <li>Custom Software</li>
+                    <li>Web Applications</li>
+                    <li>Product Development</li>
                 </ul>
             </div>
         </section>
@@ -1379,7 +1375,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                     <img src="assets/images/m.svg" width="50" alt="MPL Softwares">
                                 </a>
                                 <p class="footer-widget__text">
-                                    We’re Strategic Digital Marketing Agency
+                                    We’re Strategic Software Development Company
                                 </p>
                                 <a class="growim-btn growim-btn--white" href="contact.html">
                                     <span class="growim-btn__text">Contact Us</span>
@@ -1412,8 +1408,8 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                 <ul class="list-unstyled footer-widget__links">
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="blog-list-right.html">Blog & News</a></li>
-                                    <li><a href="faq.html">FAQ’S</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="services.html#faq">FAQ’S</a></li>
                                     <li class="d-none hide hidden"><a href="login.html">Login / Register</a></li>
                                 </ul><!-- /.list-unstyled footer-widget__links -->
                             </div><!-- /.footer-widget -->
