--- a/product-details.html
+++ b/product-details.html
@@ -526,8 +526,8 @@
                                 <ul class="list-unstyled footer-widget__links">
                                     <li><a href="about.html">Growim About</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="blog-list-right.html">Blog & News</a></li>
-                                    <li><a href="faq.html">FAQ’S</a></li>
+                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="services.html#faq">FAQ’S</a></li>
                                     <li><a href="login.html">Login / Register</a></li>
                                 </ul><!-- /.list-unstyled footer-widget__links -->
                             </div><!-- /.footer-widget -->
