all fixed address changed

--- a/blog-list-right.html
+++ b/blog-list-right.html
@@ -107,7 +107,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-1.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -127,7 +127,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-2.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-2.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -147,7 +147,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-3.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-3.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -167,7 +167,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-4.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-4.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -187,7 +187,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-5.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-6.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -439,7 +439,7 @@
                                     <ul class="sidebar__posts list-unstyled">
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-1.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-1.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -448,7 +448,7 @@
                                         </li>
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-2.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-2.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -457,7 +457,7 @@
                                         </li>
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-3.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-3.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -527,7 +527,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-xl-6">
                             <div class="mail-section__image">
-                                <img src="assets/images/resources/mail-1-1.png" alt="Growim">
+                                <img src="assets/images/resources/mail-1-1.png" alt="MPL Softwares">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-6">
@@ -705,7 +705,7 @@
         <div class="sidebar-one__content">
             <div class="sidebar-one__close"><i class="flaticon-close"></i></div><!-- /.siderbar-close -->
             <div class="sidebar-one__logo">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="growim" width="160"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="MPL Softwares" width="160"></a>
             </div><!-- /.sidebar-one__logo-box -->
             <p class="sidebar-one__text">
                 Mauris ut enim sit amet lacus ornare ullamcor. Praesent placerat nequ
