--- a/blog-details-right.html
+++ b/blog-details-right.html
@@ -107,7 +107,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-1.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -127,7 +127,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-2.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-2.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -147,7 +147,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-3.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-3.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -167,7 +167,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-4.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-4.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -187,7 +187,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-5.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-6.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -306,7 +306,7 @@
                 <div class="row gutter-y-60">
                     <div class="col-lg-8">
                         <div class="blog-details__image">
-                            <img src="assets/images/blog/blog-details-1.png" alt="growim">
+                            <img src="assets/images/blog/blog-details-1.png" alt="MPL Softwares">
                             <div class="blog-details__date"><span>20</span>June</div><!-- /.blog-details__date -->
                         </div>
                         <ul class="list-unstyled blog-details__meta">
@@ -330,12 +330,12 @@
                             <div class="row mb gutter-y-30">
                                 <div class="col-md-6">
                                     <div class="blog-details__content__image">
-                                        <img src="assets/images/blog/blog-details-2.png" alt="growim">
+                                        <img src="assets/images/blog/blog-details-2.png" alt="MPL Softwares">
                                     </div>
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="blog-details__content__image">
-                                        <img src="assets/images/blog/blog-details-3.png" alt="growim">
+                                        <img src="assets/images/blog/blog-details-3.png" alt="MPL Softwares">
                                     </div>
                                 </div><!-- /.col-md-6 -->
                             </div>
@@ -367,7 +367,7 @@
                             <ul class="list-unstyled comments-one__list">
                                 <li class="comments-one__card">
                                     <div class="comments-one__card__image">
-                                        <img src="assets/images/blog/blog-comment-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-comment-1-1.png" alt="MPL Softwares">
                                     </div><!-- /.comments-one__card__image -->
                                     <div class="comments-one__card__content">
                                         <h3 class="comments-one__card__title">Kevin martin</h3><!-- /.comments-one__card__title -->
@@ -383,7 +383,7 @@
                                 </li><!-- /.comments-one__card -->
                                 <li class="comments-one__card">
                                     <div class="comments-one__card__image">
-                                        <img src="assets/images/blog/blog-comment-1-2.png" alt="growim">
+                                        <img src="assets/images/blog/blog-comment-1-2.png" alt="MPL Softwares">
                                     </div><!-- /.comments-one__card__image -->
                                     <div class="comments-one__card__content">
                                         <h3 class="comments-one__card__title">Sarah albert</h3><!-- /.comments-one__card__title -->
@@ -438,7 +438,7 @@
                                     <ul class="sidebar__posts list-unstyled">
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-1.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-1.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -447,7 +447,7 @@
                                         </li>
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-2.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-2.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -456,7 +456,7 @@
                                         </li>
                                         <li class="sidebar__posts__item">
                                             <div class="sidebar__posts__image">
-                                                <img src="assets/images/blog/lp-1-3.png" alt="growim">
+                                                <img src="assets/images/blog/lp-1-3.png" alt="MPL Softwares">
                                             </div><!-- /.sidebar__posts__image -->
                                             <div class="sidebar__posts__content">
                                                 <p class="sidebar__posts__meta"><a href="blog-list-right.html"><i class="flaticon-user-two"></i> by Admin</a></p><!-- /.sidebar__posts__date -->
@@ -526,7 +526,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-xl-6">
                             <div class="mail-section__image">
-                                <img src="assets/images/resources/mail-1-1.png" alt="Growim">
+                                <img src="assets/images/resources/mail-1-1.png" alt="MPL Softwares">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-6">
@@ -704,7 +704,7 @@
         <div class="sidebar-one__content">
             <div class="sidebar-one__close"><i class="flaticon-close"></i></div><!-- /.siderbar-close -->
             <div class="sidebar-one__logo">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="growim" width="160"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="MPL Softwares" width="160"></a>
             </div><!-- /.sidebar-one__logo-box -->
             <p class="sidebar-one__text">
                 Mauris ut enim sit amet lacus ornare ullamcor. Praesent placerat nequ
