--- a/blog-grid.html
+++ b/blog-grid.html
@@ -107,7 +107,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-1.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -127,7 +127,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-2.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-2.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -147,7 +147,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-3.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-3.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -167,7 +167,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-4.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-4.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -187,7 +187,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-5.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-6.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -319,7 +319,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Business strategy for marketing system</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -347,7 +347,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Why is Supply Chain Visibility So Important?</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -375,7 +375,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Discover a better way of redefining company goals</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -403,7 +403,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Tech Products the makes its iT Solutions</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -431,7 +431,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">What’s the Holding Back the It Solution</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -459,7 +459,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Keep Your Business Safe & Ensure</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -487,7 +487,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Keep Your Business Safe & Ensure High.</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -515,7 +515,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Solution This Business For is Marketing Blog</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -543,7 +543,7 @@
                                 <h3 class="blog-card__title"><a href="blog-details-right.html">Business Rules of Running to Web Solution</a></h3><!-- /.blog-card__title -->
                                 <div class="blog-card__bottom">
                                     <div class="blog-card__author">
-                                        <img src="assets/images/blog/blog-author-1-1.png" alt="growim">
+                                        <img src="assets/images/blog/blog-author-1-1.png" alt="MPL Softwares">
                                         <div class="blog-card__author__content">
                                             <span><a href="blog-list-right.html">Admin</a></span>Cody Fisher
                                         </div>
@@ -588,7 +588,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-xl-6">
                             <div class="mail-section__image">
-                                <img src="assets/images/resources/mail-1-1.png" alt="Growim">
+                                <img src="assets/images/resources/mail-1-1.png" alt="MPL Softwares">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-6">
@@ -766,7 +766,7 @@
         <div class="sidebar-one__content">
             <div class="sidebar-one__close"><i class="flaticon-close"></i></div><!-- /.siderbar-close -->
             <div class="sidebar-one__logo">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="growim" width="160"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="MPL Softwares" width="160"></a>
             </div><!-- /.sidebar-one__logo-box -->
             <p class="sidebar-one__text">
                 Mauris ut enim sit amet lacus ornare ullamcor. Praesent placerat nequ
