--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -107,7 +107,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-1.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -127,7 +127,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-2.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-2.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -147,7 +147,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-3.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-3.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -167,7 +167,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-4.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-4.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -187,7 +187,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-5.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-6.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -304,7 +304,7 @@
         <section class="portfolio-details">
             <div class="container">
                 <div class="portfolio-details__image">
-                    <img src="assets/images/portfolio/portfolio-details-1.png" alt="growim">
+                    <img src="assets/images/portfolio/portfolio-details-1.png" alt="MPL Softwares">
                 </div>
                 <div class="row">
                     <div class="col-lg-8">
@@ -350,12 +350,12 @@
                             <div class="row mb gutter-y-30">
                                 <div class="col-md-6">
                                     <div class="portfolio-details__content__image">
-                                        <img src="assets/images/portfolio/portfolio-details-2.png" alt="growim">
+                                        <img src="assets/images/portfolio/portfolio-details-2.png" alt="MPL Softwares">
                                     </div>
                                 </div><!-- /.col-md-6 -->
                                 <div class="col-md-6">
                                     <div class="portfolio-details__content__image">
-                                        <img src="assets/images/portfolio/portfolio-details-3.png" alt="growim">
+                                        <img src="assets/images/portfolio/portfolio-details-3.png" alt="MPL Softwares">
                                     </div>
                                 </div><!-- /.col-md-6 -->
                             </div>
@@ -367,12 +367,12 @@
                             </p>
                             <div class="portfolio-details__pagination">
                                 <a class="portfolio-details__pagination__item" href="portfolio-details.html">
-                                    <img src="assets/images/portfolio/pagination-prev.png" alt="growim">
+                                    <img src="assets/images/portfolio/pagination-prev.png" alt="MPL Softwares">
                                     Previous
                                 </a>
                                 <a class="portfolio-details__pagination__item" href="portfolio-details.html">
                                     Next
-                                    <img src="assets/images/portfolio/pagination-next.png" alt="growim">
+                                    <img src="assets/images/portfolio/pagination-next.png" alt="MPL Softwares">
                                 </a>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-xl-6">
                             <div class="mail-section__image">
-                                <img src="assets/images/resources/mail-1-1.png" alt="Growim">
+                                <img src="assets/images/resources/mail-1-1.png" alt="MPL Softwares">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-6">
@@ -609,7 +609,7 @@
         <div class="sidebar-one__content">
             <div class="sidebar-one__close"><i class="flaticon-close"></i></div><!-- /.siderbar-close -->
             <div class="sidebar-one__logo">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="growim" width="160"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="MPL Softwares" width="160"></a>
             </div><!-- /.sidebar-one__logo-box -->
             <p class="sidebar-one__text">
                 Mauris ut enim sit amet lacus ornare ullamcor. Praesent placerat nequ
