--- a/team-details.html
+++ b/team-details.html
@@ -107,7 +107,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-1.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -127,7 +127,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-2.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-2.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -147,7 +147,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-3.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-3.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -167,7 +167,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-4.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-4.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -187,7 +187,7 @@
                                                                 <div class="col-md-6 col-lg-4">
                                                                     <div class="demo-one__card">
                                                                         <div class="demo-one__image">
-                                                                            <img src="assets/images/growim-landing/home-5.png" alt="growim">
+                                                                            <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
                                                                                 <a href="index-6.html" class="growim-btn demo-one__btn">
                                                                                     <span class="growim-btn__text">Multi Page</span>
@@ -307,7 +307,7 @@
                     <div class="row gutter-y-30">
                         <div class="col-lg-5">
                             <div class="team-details__image">
-                                <img src="assets/images/team/team-d-1.png" alt="growim">
+                                <img src="assets/images/team/team-d-1.png" alt="MPL Softwares">
                             </div><!-- /.team-details__image -->
                         </div><!-- /.col-lg-5 -->
                         <div class="col-lg-7">
@@ -343,7 +343,7 @@
                                     dining late at night with the chefs of the hotels where he stays during his travels
                                 </p>
                                 <div class="team-details__sign">
-                                    <img src="assets/images/resources/sign.png" alt="growim">
+                                    <img src="assets/images/resources/sign.png" alt="MPL Softwares">
                                 </div>
                                 <!-- /.team-details__text -->
                                 <ul class="list-unstyled team-details__list">
@@ -446,7 +446,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-xl-6">
                             <div class="mail-section__image">
-                                <img src="assets/images/resources/mail-1-1.png" alt="Growim">
+                                <img src="assets/images/resources/mail-1-1.png" alt="MPL Softwares">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-6">
@@ -624,7 +624,7 @@
         <div class="sidebar-one__content">
             <div class="sidebar-one__close"><i class="flaticon-close"></i></div><!-- /.siderbar-close -->
             <div class="sidebar-one__logo">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="growim" width="160"></a>
+                <a href="index.html" aria-label="logo image"><img src="assets/images/logo-2-light.png" alt="MPL Softwares" width="160"></a>
             </div><!-- /.sidebar-one__logo-box -->
             <p class="sidebar-one__text">
                 Mauris ut enim sit amet lacus ornare ullamcor. Praesent placerat nequ
