--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,7 @@
                                     <div class="form-one__control">
                                         <input type="email" name="email" placeholder="Email Address">
                                     </div><!-- /.form-one__control -->
+                                    
                                     <div class="form-one__control form-one__control--full">
                                         <textarea name="message" placeholder="Write Message . . ."></textarea><!-- /# -->
                                     </div><!-- /.form-one__control -->
@@ -286,11 +287,12 @@
                             <div class="footer-widget footer-widget--links">
                                 <h2 class="footer-widget__title">our services</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__links">
-                                    <li><a href="about.html">digital marketing</a></li>
-                                    <li><a href="contact.html">web development</a></li>
-                                    <li><a href="blog-list-right.html">SEO optimized</a></li>
-                                    <li><a href="faq.html">App Development</a></li>
-                                    <li><a href="login.html">Email Marketing</a></li>
+                                    <li><a href="services.html">Product development</a></li>
+                                    <li><a href="services.html">Web development</a></li>
+                                    <li><a href="services.html">SEO optimized</a></li>
+                                    <li><a href="services.html">Mobile app development</a></li>
+                                    <li><a href="services.html">AI integration</a></li>
+                                    <!-- <li><a href="login.html">Email Marketing</a></li> -->
                                 </ul><!-- /.list-unstyled footer-widget__links -->
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-md-6 -->
