--- a/services.html
+++ b/services.html
@@ -234,7 +234,7 @@ window.addEventListener("message", function (e) {
                             <p class="service-four__item__text">
                                 In order to scale new customer acquisition and retention commerce brands, we work across
                             </p><!-- /.service-text -->
-                            <a class="service-four__item__rm d-none href="service-details.html">
+                            <a class="service-four__item__rm d-none" href="service-details.html">
                                 <i class="flaticon-up-right-arrow"></i>
                             </a>
                         </div><!-- /.service-item -->
@@ -747,7 +747,7 @@ window.addEventListener("message", function (e) {
 
                             <h3 class="sec-title__title">Get In Touch</h3><!-- /.sec-title__title -->
                         </div><!-- /.sec-title -->
-                        <form class="contact-one__form contact-form-validated form-one wow fadeInUp" data-wow-duration="1500ms" action="https://www.medmarketify.com/inc/sendemail.php">
+                        <form class="contact-one__form contact-form-validated form-one wow fadeInUp" data-wow-duration="1500ms" action="sendemail.php">
                             <h4 class="contact-one__form__title">How May We Help You!</h4>
                             <div class="form-one__group">
                                 <div class="form-one__control">
@@ -758,14 +758,14 @@ window.addEventListener("message", function (e) {
                                     <label for="email">Your Email*</label>
                                     <input id="email" type="email" name="email" placeholder="info@example.com">
                                 </div><!-- /.form-one__control -->
-                                <div class="form-one__control">
+                                <!-- <div class="form-one__control">
                                     <label for="subject">Subject*</label>
                                     <input id="subject" type="text" name="subject" placeholder="Subject">
-                                </div><!-- /.form-one__control -->
-                                <div class="form-one__control">
+                                </div> -->
+                                <!-- <div class="form-one__control">
                                     <label for="phone">Your Phone*</label>
                                     <input id="phone" type="tel" name="phone" placeholder="+1253 457 7840">
-                                </div><!-- /.form-one__control -->
+                                </div> -->
                                 <div class="form-one__control form-one__control--full">
                                     <label for="message">Message*</label>
                                     <textarea id="message" name="message" placeholder="Write Message"></textarea><!-- /# -->
@@ -851,11 +851,12 @@ window.addEventListener("message", function (e) {
                         <div class="footer-widget footer-widget--links">
                             <h2 class="footer-widget__title">our services</h2><!-- /.footer-widget__title -->
                             <ul class="list-unstyled footer-widget__links">
-                                <li><a href="about.html">digital marketing</a></li>
-                                <li><a href="contact.html">web development</a></li>
-                                <li><a href="blog-list-right.html">SEO optimized</a></li>
-                                <li><a href="faq.html">App Development</a></li>
-                                <li><a href="login.html">Email Marketing</a></li>
+                                <li><a href="services.html">Product development</a></li>
+                                    <li><a href="services.html">Web development</a></li>
+                                    <li><a href="services.html">SEO optimized</a></li>
+                                    <li><a href="services.html">Mobile app development</a></li>
+                                    <li><a href="services.html">AI integration</a></li>
+                                <!-- <li><a href="login.html">Email Marketing</a></li> -->
                             </ul><!-- /.list-unstyled footer-widget__links -->
                         </div><!-- /.footer-widget -->
                     </div><!-- /.col-md-6 -->
