--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </div>
                         <div class="main-slider-one__report">
                             <p class="main-slider-one__report__text">monthly traffic</p>
-                            <h5 class="main-slider-one__report__number">220,342.76<span>+3.4%</span></h5>
+                            <h5 class="main-slider-one__report__number">35.5K<span>+3.4%</span></h5>
                         </div>
                         <div class="main-slider-one__content">
                             <h5 class="main-slider-one__sub-title">SCALE YOUR BUSINESS </h5>
@@ -164,7 +164,7 @@
                                     <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                             </div><!-- slider-btn -->
-                            <a href="https://www.youtube.com/watch?v=h9MbznbxlLc" class="video-popup">
+                            <a href="https://www.youtube.com/mplsoftwares" class="video-popup">
                                 <img src="assets/images/shapes/slider-1-shape-video.png" alt="MPL Softwares">
                                 <span class="video-popup__icon">
                                     <i class="fa fa-play"></i>
