--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                     <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                             </div>
-                            <a href="https://www.youtube.com/watch?v=h9MbznbxlLc" class="video-popup">
+                            <a href="https://www.youtube.com/mplsoftwares" class="video-popup">
                                 <img src="assets/images/shapes/slider-1-shape-video.png" alt="MPL Softwares">
                                 <span class="video-popup__icon">
                                     <i class="fa fa-play"></i>
