slide removed and fix height

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div><!-- item -->
-                <div class="item">
+                <!-- <div class="item">
                     <div class="main-slider-one__item">
                         <div class="main-slider-one__bg" style="background-image: url(assets/images/banner.svg);"></div>
                         <div class="main-slider-one__shape-one" style="background-image: url(assets/images/shapes/slider-1-shape-1.png);"></div>
@@ -227,7 +227,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="item">
                     <div class="main-slider-one__item">
                         <div class="main-slider-one__bg" style="background-image: url(assets/images/banner.svg);"></div>
