--- a/index.html
+++ b/index.html
@@ -1145,16 +1145,14 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                             <i class="flaticon-star"></i>
                                         </div><!-- /.testimonials-one__item__rating -->
                                         <div class="testimonials-one__item__content white-text">
-                                            Sed ante elit, fringilla vitae laoreet sit amet, tempus et libero. Lorem ipsum dolor sit amet,
-                                            consectetur adipiscing elit. Fusce eget quam quis turpis lacinia euismod cursus in arcu.
-                                            Integer a purus dolor. Pellentesque finibus ut erat in sagittis. Sed semper dignissim
+                                            A fantastic experience from start to finish. The attention to detail and commitment to excellence is unparalleled.
                                         </div><!-- /.testimonials-one__item__content -->
                                         <div class="testimonials-one__item__author">
-                                            <img src="assets/images/resources/testi-1-1.png" alt="MPL Softwares">
+                                            <img src="assets/images/testi1.png" alt="MPL Softwares">
                                             <h3 class="testimonials-one__item__name white-text">
-                                                Ronald Richards
+                                                Michael
                                             </h3>
-                                            <p class="testimonials-one__item__designation">Co, Founder</p>
+                                            <p class="testimonials-one__item__designation">CEO and Founder</p>
                                         </div><!-- /.testimonials-one__item__author -->
                                         <div class="testimonials-one__item__quote"><i class="flaticon-quote"></i></div><!-- /.testimonials-one__item__quote -->
                                     </div>
@@ -1169,16 +1167,14 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                             <i class="flaticon-star"></i>
                                         </div><!-- /.testimonials-one__item__rating -->
                                         <div class="testimonials-one__item__content white-text">
-                                            Sed ante elit, fringilla vitae laoreet sit amet, tempus et libero. Lorem ipsum dolor sit amet,
-                                            consectetur adipiscing elit. Fusce eget quam quis turpis lacinia euismod cursus in arcu.
-                                            Integer a purus dolor. Pellentesque finibus ut erat in sagittis. Sed semper dignissim
+                                            This service has completely exceeded my expectations. The team was professional and the results were outstanding!
                                         </div><!-- /.testimonials-one__item__content -->
                                         <div class="testimonials-one__item__author">
-                                            <img src="assets/images/resources/testi-1-1.png" alt="MPL Softwares">
+                                            <img src="assets/images/testi2.png" alt="MPL Softwares">
                                             <h3 class="testimonials-one__item__name white-text">
-                                                Ronald Richards
+                                                Emily Davis
                                             </h3>
-                                            <p class="testimonials-one__item__designation">Co, Founder</p>
+                                            <p class="testimonials-one__item__designation">Co Founder</p>
                                         </div><!-- /.testimonials-one__item__author -->
                                         <div class="testimonials-one__item__quote"><i class="flaticon-quote"></i></div><!-- /.testimonials-one__item__quote -->
                                     </div>
