--- a/index.html
+++ b/index.html
@@ -1601,6 +1601,16 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
     <script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
     <!-- template js -->
     <script src="assets/js/growim.js"></script>
+    <script>
+        window.writerEmbedConfig = {
+          token: 'aQ9W7zoEDrFy4NK_G1Y-NAZ_0ulFs4tDauHkgdijo3k',
+          baseUrl: 'https://embed.writer.com/chat/'
+        }
+      </script>
+      <script
+        src="https://embed.writer.com/chat/assets/chat-embed.min.js"
+        defer>
+     </script>
 </body>
 
 
